manifest/service.yaml
apiVersion: v1
kind: Service
metadata:
  name: trial-app-svc
spec:
  selector:
    app: trial-app
  ports:
    - protocol: TCP
      port: 80
      targetPort: 8080
  type: ClusterIP
