manifest/ingress.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: trial-app-ingress
spec:
  ingressClassName: nginx
  rules:
    - host: trial-apps.detectionserver.site
      http:
        paths:
          - path: /
            pathType: Prefix
            backend:
              service:
                name: trial-app-svc
                port:
                  number: 80
